--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,7 +24,7 @@ main{
 }
 
 section#telefone{
-    height: 627px;
+    height: 661px;
     width: 311px;
 
     position: absolute;
@@ -33,15 +33,16 @@ section#telefone{
     left: 50%;
 
     transform: translate(-50%, -50%);
-    background: url('../imagens/frame-iphone.png') no-repeat;
+    background: url('../imagens/frame-iphone-01.png') no-repeat;
 }
 
 iframe#tela{
     position: relative;
-    top: 81px;
-    left: 22px;
-    width: 267px;
-    height: 470px;
+    top: 8px;
+    left: 9px;
+    width: 296px;
+    height: 646px;
+    border-radius: 35px;
 }
 
 section#redes-sociais{
